2009-02-16 Matěj Týč <bubla@users.sf.net>
	* src-ILU/ilur: Made ilur independent on regex.h
	* autogen.sh: Simplified autotools invocation to autoreconf only
	* configure.ac: Added support for IL_NO_GAMES if users don't want
	support for game formats
	* docs/DevIL_manual.texi: Fixed errors causing trouble when making
	info files + some minor syntax enhancements.

2009-02-16 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c (ilGetAlpha): Added IL_ALPHA case.
	* il_manip.c (ilSetAlpha): Cleaned up formatting.  Added IL_ALPHA case.
	  Fixed casting issue in integer case.
	* il_texture.c: Added this file and the simple .texture loading.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_texture.c to source line.
	* il.h: Added IL_TEXTURE define.
	* il_internal.h: Added .texture loading declarations.

2009-02-15 Denton Woods <doomwiz@users.sf.net>
	* il_blp.c (iLoadBlpInternal): Finished testing and fixed BLP2 RAW with 1-bit alpha.
	* il_dicom.c: Added this file.
	* config.h.win: Added defines for new image formats.
	* il_io.c / il_jp2.c: Added .jpx, .j2k and .j2c extensions for JPEG 2000.
	* il_io.c / il_jpeg.c: Added .jif and .jfif extensions for JPEG.
	* il_dicom.c: Added DICOM loading for uncompressed formats and little endian data.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_dicom.c to source line.
	* il_dicom.c: Added DICOM support for big endian data.
	* test/in/tiff: Removed this directory.
	* il_rot.c: Added this file.  Added .rot loading.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_rot.c to source line.
	* il.h: Added IL_ROT define.
	* il_internal.h: Added Rot loading declarations.
	
2009-02-15 Matěj Týč <bubla@users.sf.net>
	* src-ILU/ilur: Added the ilur - commandline ILU frontend
	* bin, examples/Makefile.am: Moved examples's Makefile.am to bin
	directory. Added ilur to it.
	* docs/DevIL_manual.texi: Made slight syntax corrections, fixed the
	sample program and added functions index
