@@ -270,7 +270,7 @@ dnl Some people may not like it, so let's give'em a choice!
 dnl
 AC_ARG_ENABLE([game-formats],
 	       [AS_HELP_STRING([--enable-game-formats[[=yes/no]]],
-			       [Disable support for various game formats (default=yes)]) ],
+			       [Enable support for various game formats. Some people may consider that redundant. (default=yes)]) ],
 	       [],
 	       [enable_game_formats="yes"])
 AS_IF([test "x$enable_game_formats" = "xno"],
@@ -280,43 +280,43 @@ AS_IF([test "x$enable_game_formats" = "xno"],
 dnl 
 dnl Ask here whether the user wants to support a format, optionally do some tests whether it can be supported
 dnl
-TEST_FORMAT([bmp], [BMP])
-TEST_FORMAT([dcx], [DCX])
-TEST_FORMAT([doom],[WAD])
-TEST_FORMAT([exr], [EXR], [SETTLE_OPENEXR])
-TEST_FORMAT([gif], [GIF])
-TEST_FORMAT([hdr], [HDR])
-TEST_FORMAT([icns],[ICNS])
-TEST_FORMAT([icon],[ICON])
-TEST_FORMAT([iff], [IFF])
-TEST_FORMAT([jpeg],[JPG], [SETTLE_JPEG])
-TEST_FORMAT([jp2], [JP2], [SETTLE_JASPER])
-TEST_FORMAT([lcms],[LCMS],[SETTLE_LCMS])
-TEST_FORMAT([lif], [LIF])
-TEST_FORMAT([mdl], [MDL])
-TEST_FORMAT([mng], [MNG], [SETTLE_MNG])
-TEST_FORMAT([pcx], [PCX])
-TEST_FORMAT([pcd], [PCD])
-TEST_FORMAT([pic], [PIC])
-TEST_FORMAT([pix], [PIX])
-TEST_FORMAT([png], [PNG], [SETTLE_PNG])
-TEST_FORMAT([pnm], [PNM])
-TEST_FORMAT([psd], [PSD])
-TEST_FORMAT([psp], [PSP])
-TEST_FORMAT([pxr], [PXR])
-TEST_FORMAT([raw], [RAW])
-TEST_FORMAT([rot], [ROT])
-TEST_FORMAT([sgi], [SGI])
-TEST_FORMAT([sun], [SUN])
-TEST_FORMAT([texture], [TEXTURE])
-TEST_FORMAT([tga], [TGA])
-TEST_FORMAT([tiff],[TIF], [SETTLE_TIFF])
-TEST_FORMAT([tpl], [TPL])
-TEST_FORMAT([vtf], [VTF])
-TEST_FORMAT([wal], [WAL])
-TEST_FORMAT([wbmp], [WBMP])
-TEST_FORMAT([wdp], [WDP])
-TEST_FORMAT([xpm], [XPM])
+TEST_FORMAT([bmp], [BMP], [BMP is known as standard Windows bitmap])
+TEST_FORMAT([dcx], [DCX], [])
+TEST_FORMAT([doom],[WAD], [])
+TEST_FORMAT([exr], [EXR], [EXR is a HDR image file format standardized by Industrial Light and Magic. OpenEXR powered], [SETTLE_OPENEXR])
+TEST_FORMAT([gif], [GIF], [GIF is lossy and proprietary format used mainly to make animations])
+TEST_FORMAT([hdr], [HDR], [])
+TEST_FORMAT([icns],[ICNS], [])
+TEST_FORMAT([icon],[ICON], [])
+TEST_FORMAT([iff], [IFF], [])
+TEST_FORMAT([jpeg],[JPG], [JPEG is most common lossy format. libjpeg powered], [SETTLE_JPEG])
+TEST_FORMAT([jp2], [JP2], [JP2 (JPEG 2000) is probably better, but not so widespread alternative to JPEG. JasPer powered], [SETTLE_JASPER])
+TEST_FORMAT([lcms],[LCMS], [],[SETTLE_LCMS])
+TEST_FORMAT([lif], [LIF], [])
+TEST_FORMAT([mdl], [MDL], [])
+TEST_FORMAT([mng], [MNG], [MNG is basically the animated PNG. Not so widespread, though], [SETTLE_MNG])
+TEST_FORMAT([pcx], [PCX], [PCX is one of the first widely accepted DOS imaging standards])
+TEST_FORMAT([pcd], [PCD], [])
+TEST_FORMAT([pic], [PIC], [])
+TEST_FORMAT([pix], [PIX], [])
+TEST_FORMAT([png], [PNG], [PNG is a smart, loseless and even open format. libpng powered.], [SETTLE_PNG])
+TEST_FORMAT([pnm], [PNM], [PNM (Portable aNy Map format) is considered the least-common-denominator for converting pixmap, graymap, or bitmap files between different platforms.])
+TEST_FORMAT([psd], [PSD], [])
+TEST_FORMAT([psp], [PSP], [])
+TEST_FORMAT([pxr], [PXR], [])
+TEST_FORMAT([raw], [RAW], [])
+TEST_FORMAT([rot], [ROT], [])
+TEST_FORMAT([sgi], [SGI], [SGI is the native raster graphics file format for Silicon Graphics workstations])
+TEST_FORMAT([sun], [SUN], [])
+TEST_FORMAT([texture], [TEXTURE], [])
+TEST_FORMAT([tga], [TGA], [TGA (aka TARGA file format) has been used mainly in games. It is open and simple.])
+TEST_FORMAT([tiff],[TIF], [TIFF is a loseless format supporting greater color depths. libtiff powered], [SETTLE_TIFF])
+TEST_FORMAT([tpl], [TPL], [])
+TEST_FORMAT([vtf], [VTF], [])
+TEST_FORMAT([wal], [WAL], [])
+TEST_FORMAT([wbmp], [WBMP], [WBMP (Wireless Application Protocol Bitmap) is a monochrome graphics file format optimized for mobile computing devices])
+TEST_FORMAT([wdp], [WDP], [])
+TEST_FORMAT([xpm], [XPM], [])
 
 DEVIL_CHECK_LIBSQUISH
 DEVIL_CHECK_NVIDIA_TEXTOOLS
